--- a/app/src/main/res/drawable/recipe_control_border.xml
+++ b/app/src/main/res/drawable/recipe_control_border.xml
@@ -4,13 +4,13 @@
 
     <!-- View background color -->
     <solid
-        android:color="@color/recipeBackground" >
+        android:color="@color/recipeControlSelectedBackground" >
     </solid>
 
     <!-- View border color and width -->
     <stroke
         android:width="1dp"
-        android:color="@color/recipeBorder" >
+        android:color="@color/recipeControlSelectedBorder" >
     </stroke>
 
 
