--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,11 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="black_overlay">#66000000</color>
-    <color name="recipeBorderColor">#000000</color>
-    <color name="recipeBackgroundColor">#eb9494</color>
+    <color name="recipeBorder">#000000</color>
+    <color name="recipeBackground">#eb9494</color>
+    <color name="recipeControlSelectedBorder">#000000</color>
+    <color name="recipeControlSelectedBackground">#81C5E3</color>
+    <color name="powerControlBackground">#E48888</color>
+    <color name="powerControlStatusBackground">#eb9494</color>
+    <color name="brewControlBackground">#A7E8AA</color>
 </resources>
