--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -259,7 +259,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight=".2"
                     android:onClick="viewRecipies"
-                    android:text="@string/view_recipies" />
+                    android:text="@string/view_recipes" />
             </LinearLayout>
         </LinearLayout>
 
