Added ability to remove recipe, added colors and dims. Updated logo.

--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:text="@string/recipe_title"
             android:textAlignment="center"
-            android:textSize="36sp" />
+            android:textSize="@dimen/title_text_size" />
         <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
