--- a/app/src/main/res/layout/dialog_add_recipe.xml
+++ b/app/src/main/res/layout/dialog_add_recipe.xml
@@ -85,6 +85,25 @@
 
         <TableRow
             android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/enterGrind"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/enter_grind" />
+
+            <EditText
+                android:id="@+id/editGrind"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/edit_grind"
+                android:inputType="numberDecimal" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center">
 
