--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,7 +112,7 @@
                     android:scaleX="1"
                     android:scaleY="1"
                     android:textAlignment="center"
-                    android:textSize="36sp" />
+                    android:textSize="@dimen/title_text_size" />
 
                 <Button
                     android:id="@+id/button3"
@@ -137,7 +137,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/recipe_controls"
                 android:textAlignment="center"
-                android:textSize="36sp" />
+                android:textSize="@dimen/title_text_size" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -148,6 +148,8 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5">
+
+
 
                     <TableRow
                         android:layout_width="match_parent"
@@ -163,7 +165,7 @@
                             android:gravity="center"
                             android:text="@string/coffee_head"
                             android:textAlignment="center"
-                            android:textSize="18sp" />
+                            android:textSize="@dimen/default_text_size" />
 
                         <TextView
                             android:id="@+id/activeCoffee"
@@ -172,7 +174,7 @@
                             android:layout_weight=".7"
                             android:gravity="center"
                             android:textAlignment="center"
-                            android:textSize="18sp" />
+                            android:textSize="@dimen/default_text_size" />
                     </TableRow>
 
                     <TableRow
@@ -189,7 +191,7 @@
                             android:gravity="center"
                             android:text="@string/dose_head"
                             android:textAlignment="center"
-                            android:textSize="18sp" />
+                            android:textSize="@dimen/default_text_size" />
 
                         <TextView
                             android:id="@+id/activeDose"
@@ -198,7 +200,7 @@
                             android:layout_weight=".7"
                             android:gravity="center"
                             android:textAlignment="center"
-                            android:textSize="18sp" />
+                            android:textSize="@dimen/default_text_size" />
                     </TableRow>
 
                     <TableRow
@@ -215,7 +217,7 @@
                             android:gravity="center"
                             android:text="@string/yield_head"
                             android:textAlignment="center"
-                            android:textSize="18sp" />
+                            android:textSize="@dimen/default_text_size" />
 
                         <TextView
                             android:id="@+id/activeYield"
@@ -224,7 +226,7 @@
                             android:layout_weight=".7"
                             android:gravity="center"
                             android:textAlignment="center"
-                            android:textSize="18sp" />
+                            android:textSize="@dimen/default_text_size" />
                     </TableRow>
 
                     <TableRow
@@ -240,7 +242,7 @@
                             android:gravity="center"
                             android:text="@string/brewTime_head"
                             android:textAlignment="center"
-                            android:textSize="18sp" />
+                            android:textSize="@dimen/default_text_size" />
 
                         <TextView
                             android:id="@+id/activeBrewTime"
@@ -249,7 +251,32 @@
                             android:layout_weight=".7"
                             android:gravity="center"
                             android:textAlignment="center"
-                            android:textSize="18sp" />
+                            android:textSize="@dimen/default_text_size" />
+                    </TableRow>
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="@dimen/recipe_controls_row_margin"
+                        android:background="@drawable/recipe_control_border"
+                        android:padding="@dimen/recipe_controls_row_padding">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight=".3"
+                            android:gravity="center"
+                            android:text="@string/grind_head"
+                            android:textAlignment="center"
+                            android:textSize="@dimen/default_text_size" />
+
+                        <TextView
+                            android:id="@+id/activeGrind"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight=".7"
+                            android:gravity="center"
+                            android:textAlignment="center"
+                            android:textSize="@dimen/default_text_size" />
                     </TableRow>
                 </TableLayout>
 
