--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,7 +13,9 @@
     -->
     <dimen name="inner_frame_layout_padding">5dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="recipe_controls_row_margin">5dp</dimen>
+    <dimen name="recipe_controls_row_margin">2dp</dimen>
     <dimen name="recipe_controls_row_padding">2dp</dimen>
-    <dimen name="title_text_size">36sp</dimen>
+    <dimen name="title_text_size">32sp</dimen>
+    <dimen name="default_text_size">18sp</dimen>
+    <dimen name="recipe_menu_text_size">24sp</dimen>
 </resources>
